Update to jakarta servlet versions
Needed to disable velocity as it doesn't support jakarta servlets.
Needed to extensively update freemarker to support jakarta