@@ -22,8 +22,10 @@ package org.apache.tiles.request.freemarker.autotag;
 
 import freemarker.core.Environment;
 import freemarker.core.Macro;
+import freemarker.template.Configuration;
 import freemarker.template.Template;
 import freemarker.template.TemplateHashModel;
+import freemarker.template.TemplateModel;
 import freemarker.template.TemplateModelException;
 import freemarker.template.TemplateNumberModel;
 import org.junit.jupiter.api.Test;
@@ -46,7 +48,7 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 class FreemarkerUtilTest {
 
     /**
-     * Test method for {@link FreemarkerUtil#getAsObject(TemplateModel, Object)}.
+     * Test method for {@link FreemarkerUtil#getAsObject(TemplateModel, Class, Object)}.
      * @throws TemplateModelException If something goes wrong.
      */
     @Test
@@ -54,40 +56,48 @@ class FreemarkerUtilTest {
         TemplateNumberModel model = createMock(TemplateNumberModel.class);
         Template template = createMock(Template.class);
         TemplateHashModel rootDataModel = createMock(TemplateHashModel.class);
+        Configuration configuration = createMock(Configuration.class);
         Writer out = createMock(Writer.class);
 
-        expect(model.getAsNumber()).andReturn(new Integer(42));
-        expect(template.getMacros()).andReturn(new HashMap<String, Macro>());
+        expect(model.getAsNumber()).andReturn(Integer.valueOf(42));
+        expect(template.getMacros()).andReturn(new HashMap<String, Macro>()).anyTimes();
+        expect(template.getConfiguration()).andReturn(configuration).anyTimes();
+        expect(template.getLocale()).andReturn(null).anyTimes();
+        expect(configuration.getIncompatibleImprovements()).andReturn(Configuration.DEFAULT_INCOMPATIBLE_IMPROVEMENTS).anyTimes();
 
-        replay(template, rootDataModel, out);
+        replay(template, rootDataModel, out, configuration);
         new Environment(template, rootDataModel, out);
 
         replay(model);
-        assertEquals(new Integer(42), FreemarkerUtil.getAsObject(model, Integer.class, new Integer(1)));
-        verify(template, rootDataModel, out, model);
+        assertEquals(Integer.valueOf(42), FreemarkerUtil.getAsObject(model, Integer.class, Integer.valueOf(1)));
+        verify(template, rootDataModel, out, model, configuration);
     }
 
     /**
-     * Test method for {@link FreemarkerUtil#getAsObject(TemplateModel, Object)}.
+     * Test method for {@link FreemarkerUtil#getAsObject(TemplateModel, Class, Object)}.
      * @throws TemplateModelException If something goes wrong.
      */
     @Test
     void testGetAsObjectDefault() throws TemplateModelException {
         Template template = createMock(Template.class);
         TemplateHashModel rootDataModel = createMock(TemplateHashModel.class);
+        Configuration configuration = createMock(Configuration.class);
         Writer out = createMock(Writer.class);
 
-        expect(template.getMacros()).andReturn(new HashMap<String, Macro>());
+        expect(template.getMacros()).andReturn(new HashMap<String, Macro>()).anyTimes();
+        expect(template.getConfiguration()).andReturn(configuration).anyTimes();
+        expect(template.getLocale()).andReturn(null).anyTimes();
+        expect(configuration.getIncompatibleImprovements()).andReturn(Configuration.DEFAULT_INCOMPATIBLE_IMPROVEMENTS).anyTimes();
 
-        replay(template, rootDataModel, out);
+        replay(template, rootDataModel, out, configuration);
         new Environment(template, rootDataModel, out);
 
-        assertEquals(new Integer(1), FreemarkerUtil.getAsObject(null, Integer.class, new Integer(1)));
-        verify(template, rootDataModel, out);
+        assertEquals(Integer.valueOf(1), FreemarkerUtil.getAsObject(null, Integer.class, Integer.valueOf(1)));
+        verify(template, rootDataModel, out, configuration);
     }
 
     /**
-     * Test method for {@link FreemarkerUtil#getAsObject(TemplateModel, Object)}.
+     * Test method for {@link FreemarkerUtil#getAsObject(TemplateModel, Class, Object)}.
      * @throws TemplateModelException If something goes wrong.
      */
     @Test
@@ -95,20 +105,24 @@ class FreemarkerUtilTest {
         TemplateNumberModel model = createMock(TemplateNumberModel.class);
         Template template = createMock(Template.class);
         TemplateHashModel rootDataModel = createMock(TemplateHashModel.class);
+        Configuration configuration = createMock(Configuration.class);
         Writer out = createMock(Writer.class);
 
         expect(model.getAsNumber()).andThrow(new TemplateModelException());
-        expect(template.getMacros()).andReturn(new HashMap<String, Macro>());
+        expect(template.getMacros()).andReturn(new HashMap<String, Macro>()).anyTimes();
+        expect(template.getConfiguration()).andReturn(configuration).anyTimes();
+        expect(template.getLocale()).andReturn(null).anyTimes();
+        expect(configuration.getIncompatibleImprovements()).andReturn(Configuration.DEFAULT_INCOMPATIBLE_IMPROVEMENTS).anyTimes();
 
-        replay(template, rootDataModel, out);
+        replay(template, rootDataModel, out, configuration);
         new Environment(template, rootDataModel, out);
 
         replay(model);
         try {
             assertThrows(FreemarkerAutotagException.class, () ->
-                    assertEquals(new Integer(42), FreemarkerUtil.getAsObject(model, Integer.class, new Integer(1))));
+                    assertEquals(Integer.valueOf(42), FreemarkerUtil.getAsObject(model, Integer.class, Integer.valueOf(1))));
         } finally {
-            verify(template, rootDataModel, out, model);
+            verify(template, rootDataModel, out, model, configuration);
         }
     }
 
